--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,6 +7,12 @@ body {
 /* ==== Navbar ==== */
 .navbar-nav .nav-link:hover {
   color: #00245a;
+  text-align: center;
+}
+
+.nav-item {
+  list-style: none;
+  text-align: center;
 }
 
 /* ==== Header ==== */
