--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,12 +7,13 @@ body {
 /* ==== Navbar ==== */
 .navbar-nav .nav-link:hover {
   color: #00245a;
-  text-align: center;
 }
 
 .nav-item {
   list-style: none;
   text-align: center;
+  padding: 1.5rem;
+  font-size: medium;
 }
 
 /* ==== Header ==== */
