--- a/assets/css/temario.css
+++ b/assets/css/temario.css
@@ -2,7 +2,6 @@
 body {
   font-family: "Segoe UI", sans-serif;
   background-color: #f8f9fa;
-  height: 100%;
 }
 
 /* ==== Navbar ==== */
@@ -46,8 +45,29 @@ article p {
 
 /* ==== Footer ==== */
 footer {
-  background-color: #212529;
+  background-color: #7400a1 !important;
   text-align: center;
   padding: 15px 0;
   margin-top: auto;
+  color: #f8f9fa;
+  padding: 1.5rem;
+  font-family: sans-serif;
+  font-style: italic;
+}
+
+/*asimila el color de los subtitilos con el hover del nav*/
+article h2,
+article h3,
+article h4,
+article h5 {
+  color: #a600e7;
+  font-weight: bold;
+}
+
+section h2,
+section h3,
+section h4,
+section h5 {
+  color: #a600e7;
+  font-weight: bold;
 }
