--- a/assets/css/evaluacion.css
+++ b/assets/css/evaluacion.css
@@ -26,7 +26,7 @@ article {
 /* ==== Títulos y subtítulos ==== */
 article h2,
 article h3 {
-  color: #ffc75f;
+  color: #bb7a02;
   font-weight: bold;
 }
 
