--- a/assets/css/temario.css
+++ b/assets/css/temario.css
@@ -55,12 +55,12 @@ footer {
   font-style: italic;
 }
 
-/*asimila el color de los subtitilos con el hover del nav*/
+/*asimila el color de los subtitilos con el header*/
 article h2,
 article h3,
 article h4,
 article h5 {
-  color: #a600e7;
+  color: ;
   font-weight: bold;
 }
 
@@ -68,6 +68,6 @@ section h2,
 section h3,
 section h4,
 section h5 {
-  color: #a600e7;
+  color: #7400a1;
   font-weight: bold;
 }
